BLOG-85 fix on mobile footer

--- a/app/wp-content/themes/simian-remake/css/styles.css
+++ b/app/wp-content/themes/simian-remake/css/styles.css
@@ -227,7 +227,7 @@ a {
       text-align: center; }
       .footer .content .block:last-child {
         margin-right: 0; }
-      @media screen and (max-width: 36.25em) {
+      @media screen and (max-width: 48em) {
         .footer .content .block {
           float: left;
           display: block;
@@ -250,7 +250,7 @@ a {
         font-family: "Quicksand", sans-serif;
         text-transform: uppercase;
         color: white; }
-    @media screen and (max-width: 36.25em) {
+    @media screen and (max-width: 48em) {
       .footer .content .links, .footer .content .info {
         display: none; } }
     .footer .content .social .icon {
@@ -278,13 +278,13 @@ a {
       width: 14.70196%; }
       .footer .content .simian-bottom:last-child {
         margin-right: 0; }
-      @media screen and (max-width: 36.25em) {
+      @media screen and (max-width: 48em) {
         .footer .content .simian-bottom {
           float: left;
           display: block;
           margin-right: 2.35765%;
-          width: 31.76157%;
-          margin-left: 34.11922%; }
+          width: 100%;
+          text-align: center; }
           .footer .content .simian-bottom:last-child {
             margin-right: 0; } }
       .footer .content .simian-bottom .icon {
@@ -293,6 +293,9 @@ a {
         height: 77px;
         right: 0;
         margin: 0 15px; }
+        @media screen and (max-width: 48em) {
+          .footer .content .simian-bottom .icon {
+            position: relative; } }
 
 .main .content {
   max-width: 68rem;
